# Falcompress

./: Cargo.toml  README.md
src/: c77.rs  ed6.rs  ed7.rs  freadp.rs  lib.rs  offset_vec.rs  util.rs
src/bzip/: compress.rs  decompress.rs  mod.rs
src/bzip/compress/: mode1.rs  mode2.rs
