[package]
name = "falcompress"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library for handling some of Falcom's proprietary compression algorithms, with emphasis on producing identical bitstreams to Falcom's own tools"

[dependencies]
gospel = "0.3.1"
bitmatch = "0.1.1"
thiserror = "2.0.12"
